# fisica-comp-ii

./: .dockerignore  .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml  python.Dockerfile  tex.Dockerfile  texpkgs.txt
code/: util.py
code/methods/: factorial.py  gaussian_quadrature.py  lagrangian_interpolation.py  linalg.py  newton.py  romberg.py  runge_kutta.py  trapezium.py  types.py
code/pecs/pec3/: data.py  ex1.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  util.py
code/pecs/pec4/: data.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py
code/pecs/pec5/: data.py  ex1.py  ex2.py  ex3.py  ex4.py  ex5.py
code/pecs/pec6/: data.py  ex10.py  ex11.py  ex3.py  ex4.py  ex5.py  extra.py
pecs/pec3/: pec3.tex
pecs/pec3/chapters/: 00-intro.tex  01-polinomio_cuadratico.tex  02-propagacion_errores.tex  03-polinomio_cubico.tex  04-diferencias_newton.tex  05-error_absoluto_cometido.tex  06-termino_siguiente.tex  07-error_interpolacion.tex  08-discusion_errors.tex  09-max_min_error.tex  10-discusion_general.tex
pecs/pec3/data/: age01.csv  age03.csv  errors01.csv  errors02.csv  errors03.csv  errors04.csv  errors05.csv  errors06.csv
pecs/pec4/: pec4.tex
pecs/pec4/chapters/: 00-intro.tex  01-aproximante-pade.tex  02-minimos-cuadrados.tex  03-metodo-newton.tex  04-error-cuadratico-minimo.tex  05-comparacion-aproximaciones.tex  06-error-pade.tex  07-taylor.tex  appendix.tex
pecs/pec5/: pec5.out  pec5.tex
pecs/pec5/chapters/: 00-intro.tex  01-regla-del-trapecio.tex  02-metodo_de_romberg.tex  03-cuadratura_de_gauss.tex  appendix.tex  (+2 more)
pecs/pec6/: pec6.out  pec6.tex
(+25 files in other folders)
